--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # ------------------------------------------------------------------------------
 # (c) balarabe@protonmail.com                                     License: GPLv3
-# :v: 2018-02-28 14:19:26 3CD5F3                                    [.gitignore]
+# :v: 2018-04-01 11:59:44 A798CA                                    [.gitignore]
 # ------------------------------------------------------------------------------
 
 # ignore temp. files and drafts
@@ -16,6 +16,8 @@ __*
 cover.out
 
 # ignore auxiliary files
+*.bat
+*.sh
 .idea
 
 # ignore binary files:
