--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # ------------------------------------------------------------------------------
 # (c) balarabe@protonmail.com                                     License: GPLv3
-# :v: 2018-04-01 11:59:44 A798CA                                    [.gitignore]
+# :v: 2018-04-01 11:59:44 DEE944                               cmdx/[.gitignore]
 # ------------------------------------------------------------------------------
 
 # ignore temp. files and drafts
