--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # ------------------------------------------------------------------------------
 # (c) balarabe@protonmail.com                                     License: GPLv3
-# :v: 2018-04-01 11:59:44 DEE944                               cmdx/[.gitignore]
+# :v: 2019-03-04 16:36:12 31B609                               cmdx/[.gitignore]
 # ------------------------------------------------------------------------------
 
 # ignore temp. files and drafts
@@ -24,6 +24,7 @@ cover.out
 *.exe
 *.exe*
 *.zip
+/cmdx
 app
 
 #end
