--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # ------------------------------------------------------------------------------
 # (c) balarabe@protonmail.com                                     License: GPLv3
-# :v: 2019-03-04 16:36:12 31B609                               cmdx/[.gitignore]
+# :v: 2019-03-14 00:39:42 3156B6                               cmdx/[.gitignore]
 # ------------------------------------------------------------------------------
 
 # ignore temp. files and drafts
@@ -19,6 +19,7 @@ cover.out
 *.bat
 *.sh
 .idea
+/.vscode/launch.json
 
 # ignore binary files:
 *.exe
