Make minor changes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "mode": "debug",
             "program": "${fileDirname}",
             "env": {},
-            "args": ["log-time"],
+            "args": ["log-time", "--backlog=2days"],
 
         }
     ]
