Rename 'CMDX Utility' to 'CMDX Utilities Suite' in headers

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ## -----------------------------------------------------------------------------
-## CMDX Utility                                                cmdx/[.gitignore]
+## CMDX Utilities Suite                                        cmdx/[.gitignore]
 ## (c) balarabe@protonmail.com                                    License: GPLv3
 ## -----------------------------------------------------------------------------
 
