--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,5 @@
 // -----------------------------------------------------------------------------
-// CMDX Utility                                       cmdx/.vscode/[launch.json]
+// CMDX Utilities Suite                               cmdx/.vscode/[launch.json]
 // (c) balarabe@protonmail.com                                    License: GPLv3
 // -----------------------------------------------------------------------------
 
