Make minor syntax changes and improvements

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,10 @@
                 "--backlog=24hours",
                 "--repeat=disabled",
                 "--verbose=false"
+
+                // "rt",
+                // "X:\\user\\plan\\read.file",
+                // "X:\\user\\plan\\write.file"
             ]
         }
     ]
