--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,8 +25,8 @@
                 "--verbose=false"
 
                 // "rt",
-                // "X:\\user\\plan\\read.file",
-                // "X:\\user\\plan\\write.file"
+                // "X:\\user\\admin\\read.file",
+                // "X:\\user\\admin\\write.file"
             ]
         }
     ]
