chore: update .vscode/settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,35 @@
 {
     "cSpell.words": [
+        "autotime",
         "balacode",
         "buildlog",
+        "buildpath",
+        "cmds",
         "cmdx",
+        "consts",
+        "coverprofile",
         "cxfunc",
         "dlif",
         "gcflags",
+        "Getwd",
+        "GOARCH",
+        "golint",
+        "GOPATH",
+        "GOROOT",
         "goroutines",
         "gosql",
         "gsmmkt",
+        "libpath",
+        "Lshortfile",
         "lsif",
         "mdle",
         "meis",
         "mnlhq",
         "mtcw",
         "mtif",
+        "O_WRONLY",
+        "Println",
+        "proto",
         "rdup",
         "repls",
         "rfbh",
@@ -25,9 +40,14 @@
         "rsha",
         "rsif",
         "sfln",
+        "Sprintf",
+        "strconv",
         "strs",
+        "struct",
         "subfolders",
+        "timelog",
         "tstr",
+        "uintptr",
         "unconstifier",
         "wdif",
         "zxxx"
